[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
license = "AGPL-3.0-only"
repository = "https://github.com/solana-rpc/cloudbreak"
authors = [
  "Triton One Limited",
  "Fernando Deluret <38841537+fernandodeluret@users.noreply.github.com>",
  "Arthur Paiva <38506981+ArthurPaivaT@users.noreply.github.com>",
  "Nagaprasad V R <81755170+Nagaprasadvr@users.noreply.github.com>",
  "Kyle Espinola",
  "Wilfred Almeida <60785452+WilfredAlmeida@users.noreply.github.com>",
  "Daniel Urgell",
  "Mateusz Mroz",
]

[workspace.dependencies]
humantime = "2"
clap = { version = "4.5.34", features = ["derive"] }
hex = "0.4.3"
env_logger = { version = "0.11.7" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
sea-orm = { version = "1.1.8", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = { version = "0.8.20" }
yellowstone-grpc-proto = { version = "9", default-features = false }
anyhow = "1.0.97"
thiserror = "2.0.12"
solana-account = "3.0.0"
solana-pubkey = "4.0.0"
solana-program = "3.0.0"
solana-runtime = "3.1.5"
solana-accounts-db = "3.1.5"
solana-hash = "4.0.1"
solana-hard-forks = "3.0.0"
solana-fee-calculator = "3.0.0"
solana-rent-collector = "2.3.0"
solana-epoch-schedule = "3.0.0"
solana-inflation = "3.0.0"
solana-stake-interface = "2.0.2"
solana-serde = "3.0.0"
solana-rpc-client-api = "3.1.5"
solana-account-decoder-client-types = "3.1.5"
solana-account-decoder = "3.1.5"
solana-vote-interface = { version = "4.0.4", default-features = false, features = ["bincode", "serde"] }
solana-commitment-config = "3.1.0"
solana-client = "3.1.5"
futures = "0.3.31"
rust_decimal = "1.37.1"
pin-project = "1.1.10"
lazy_static = "1.5.0"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "http1"] }
http-body-util = "0.1.3"
chrono = "0.4.41"
prometheus = { version = "0.14.0", features = ["push"] }
solana-lattice-hash = "3.1.5"
blake3 = "1"
tracing-opentelemetry = "0.32.0"
opentelemetry = { version = "0.31.0", features = ["trace"] }

cloudbreak-api = { path = "crates/api" }
cloudbreak-snapshot = { path = "crates/snapshot" }
cloudbreak-index = { path = "crates/index" }
cloudbreak-core = { path = "crates/core" }
cloudbreak-entity = { path = "crates/entity" }
cloudbreak-query-tracker = { path = "crates/query-tracker" }