[package]
name = "cloudbreak-index"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
authors = [
  "Triton One Limited",
  "Fernando Deluret <38841537+fernandodeluret@users.noreply.github.com>",
  "Arthur Paiva <38506981+ArthurPaivaT@users.noreply.github.com>",
  "Nagaprasad V R <81755170+Nagaprasadvr@users.noreply.github.com>",
  "Kyle Espinola",
  "Wilfred Almeida <60785452+WilfredAlmeida@users.noreply.github.com>",
  "Daniel Urgell",
  "Mateusz Mroz",
]

[dependencies]
cloudbreak-core = { workspace = true }
cloudbreak-entity = { workspace = true }
cloudbreak-snapshot = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.143"
sea-orm = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
solana-pubkey = { workspace = true }
solana-stake-interface = { workspace = true, features = ["serde"] }
solana-vote-interface = { workspace = true }
bincode = "1.3"
yellowstone-grpc-proto = { workspace = true }
solana-program = { workspace = true }
futures = { workspace = true }
rust_decimal = { workspace = true }
cloudbreak-api = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
solana-client = { workspace = true }

solana-lattice-hash = { workspace = true }
hex = { workspace = true }

yellowstone-grpc-client = { version = "9" }